egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 'bot5'
  namespace: rtomyj-dev
spec:
  podSelector:
    matchLabels:
      app: hero
  egress:
    - { }
  policyTypes:
    - Egress
